# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasta-tools"
version = "1.0.0"
description = "Tools for reading fasta files in bioinformatics"
readme = "README.md"
authors = [{ name = "Tessa Bass", email = "tessabri.bass@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    # edit these
    # "feedparser >= 5.2.0",
    # "html2text",
    # 'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    # edit these
    # packages used for development or testing
    # "black", "bumpver", "isort", "pip-tools", "pytest"
]

[project.urls]
Homepage = "https://github.com/tessabass01/fasta-tools"

[project.scripts]
fasta-tools = "fasta-tools.__main__:main"